# trench

./: .gitignore  Dockerfile  NOTE.md  README.md  TODO.md  build.sh  build_container.sh  logo.tr  test.sh
.github/workflows/: ci.yml
cartographer/: build.sh  cartographer.c
compiler/: dune  dune-project  note.txt  trenchc.opam
compiler/lib/: absyn.ml  builtins.ml  compile.ml  dune  exceptions.ml  features.ml  field_props.ml  flags.ml  game_lexer.mll  game_parser.mly  helpers.ml  instr_settings.ml  lexer.mll  optimize.ml  parser.mly  player_lexer.mll  player_parser.mly  programRep.ml  resources.ml  rules.ml  settings.ml  themes.ml  toProgramRep.ml  transform.ml  typing.ml
compiler/src/: dune  trenchc.ml
data_structures/: build.sh  event_list.c  event_list.h  program.c  resource_map.c  resource_map.h
doc/: board.md  builtins.md  game.md  language.md
engine/: array_list.c  array_list.h  build.sh  builtins.c  builtins.h  color.c  color.h  compiler_interface.c  compiler_interface.h  compiler_wrapper.c  compiler_wrapper.h  damage.h  direction.h  entity.c  entity.h  entity_list.c  entity_list.h  event_list.c  event_list.h  events.c  events.h  field_scan.c  field_scan.h  fields.c  fields.h  game_rules.h  game_state.c  game_state.h  instructions.h  linked_list.c  linked_list.h  loader.c  loader.h  location.c  location.h  log.c  log.h  main.c  note.txt  player.c  (+14 more)
extensions/trench-highlighting/: language-configuration.json  package.json
font/: install.sh  note.txt
font/Trench.sfdir/: _A.glyph  font.props
maps/: continental.trm  first.trm  four.trm  islands.trm  longboy.trm  simplegen.trm  trial.trm
tests/: test.tr  test.trg  test.trm
trenchlate/: build.sh  trenchlate.c
web_comp/: server.js
(+2 files in other folders)
