(ocamllex player_lexer game_lexer)
(menhir (modules player_parser game_parser))
(library
 (name trenchclib)
 (libraries str) 
 (modules
   programRep
   exceptions
   absyn
   optimize
   helpers
   player_lexer
   player_parser
   game_lexer
   game_parser
   toProgramRep
   typing
   transform
   flags
   compile
 )
)